# snowflake-external-functions

./: .gitignore  Dockerfile  Makefile  README.md  contract-event.json.example  docker-compose.yml  event.json.example  package-lock.json  pyproject.toml  sandbox  serverless.yml
.github/workflows/: deploy.yml
src/: handlers.py  swap.json  test.json  test.py  utils.py
