[tool.poetry]
name = "snowflake-external-functions"
version = "0.1.0"
description = "Snowflake external functions"
authors = ["0xPeterSatoshi <0xpetersatoshi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"